<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_new_release"
            android:icon="@drawable/ic_new_releases_black_24dp"
            android:title="@string/menu_new_release" />
        <item
            android:id="@+id/nav_movie"
            android:icon="@drawable/ic_menu_movie"
            android:title="@string/menu_movie" />
        <item
            android:id="@+id/nav_tv_show"
            android:icon="@drawable/ic_menu_tv_show"
            android:title="@string/menu_tvShow" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_menu_favorite"
            android:title="@string/menu_favorite" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_setting" />
    </group>

</menu>
